@@ -74,7 +74,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import org.slf4j.Logger;
@@ -1133,9 +1132,7 @@ public class BigQueryDatasetPdao {
             .add("transactionTerminatedAtCol", PDAO_TRANSACTION_TERMINATED_AT_COLUMN)
             .add("transactStatusVal", TransactionModel.StatusEnum.ACTIVE)
             .add("columns", PDAO_ROW_ID_COLUMN)
-            .add(
-                "columns",
-                table.getColumns().stream().map(Column::getName).collect(Collectors.toList()))
+            .add("columns", table.getColumns().stream().map(Column::getName).toList())
             .add(
                 "partitionByDate",
                 table.getBigQueryPartitionConfig() != null
@@ -1240,8 +1237,7 @@ public class BigQueryDatasetPdao {
       boolean addTransactionIdColumn,
       boolean enforceRequiredCols) {
     List<Field> fieldList = new ArrayList<>();
-    List<String> primaryKeys =
-        table.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList());
+    List<String> primaryKeys = table.getPrimaryKey().stream().map(Column::getName).toList();
 
     if (addRowIdColumn) {
       fieldList.add(Field.of(PDAO_ROW_ID_COLUMN, LegacySQLTypeName.STRING));
@@ -1428,17 +1424,5 @@ public class BigQueryDatasetPdao {
       }
     }
     return null;
-  }
-
-  // WARNING: SQL string must be sanitized before calling this method
-  public <T> List<T> runQuery(
-      String sql, Dataset dataset, Function<TableResult, List<T>> aggregateResults) {
-    try {
-      final BigQueryProject bigQueryProject = BigQueryProject.from(dataset);
-      final TableResult result = bigQueryProject.query(sql);
-      return aggregateResults.apply(result);
-    } catch (InterruptedException ex) {
-      throw new PdaoException("Snapshot builder query was interrupted", ex);
-    }
   }
 }
